--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ resolver = "2"
 #[patch."https://github.com/oxidecomputer/dropshot"]
 #dropshot = { path = "../dropshot/dropshot" }
 
-#[patch."https://github.com/oxidecomputer/typify"]
-#typify = { path = "../typify/typify" }
+[patch."https://github.com/oxidecomputer/typify"]
+typify = { git = "https://github.com/coolavery/typify.git", branch = "0.1.0-unreachable" }
 
 #[patch.crates-io]
 #serde_tokenstream = { path = "../serde_tokenstream" }
